<?xml version="1.0" encoding="utf-8"?>

<!--
 	Copyright 2010 Cesar Valiente Gordo
 
 	This file is part of QuiteSleep.

    QuiteSleep is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    QuiteSleep is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/schedule.separator.startTime"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/schedule.separator.startTime" />

        <LinearLayout
            android:id="@+id/start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="3" >

            <!-- Start hour label -->

            <TextView
                android:id="@+id/schedule.textview.startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <!-- Button for define the start hour -->

            <ImageButton
                android:id="@+id/schedule.button.startTime"
                style="@style/common_button_style"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:src="@drawable/start_time" />
        </LinearLayout>

        <TextView
            android:id="@+id/schedule.separator.endTime"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:text="@string/schedule.separator.endTime" />

        <LinearLayout
            android:id="@+id/end_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="3" >

            <!-- Label for the end hour -->

            <TextView
                android:id="@+id/schedule.textview.endTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <!-- Button for the end hour -->

            <ImageButton
                android:id="@+id/schedule.button.endTime"
                style="@style/common_button_style"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:src="@drawable/end_time" />
        </LinearLayout>

        <View
            android:id="@+id/schedule.divider1"
            style="@style/divider_grey_normal" />

        <TextView
            android:id="@+id/schedule.separator.daysweek"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:text="@string/schedule.separator.daysweek" />

        <!-- Table for insert the week days in columns -->

        <TableLayout
            android:id="@+id/schedule.table.daysweek"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:stretchColumns="0,1,2,3,4,5,6" >

            <TableRow>

                <TextView
                    android:padding="5dip"
                    android:text="@string/monday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/tuesday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/wednesday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/thursday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/friday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/saturday"
                    android:textColor="@color/white" />

                <TextView
                    android:padding="5dip"
                    android:text="@string/sunday"
                    android:textColor="@color/white" />
            </TableRow>

            <View
                android:layout_height="2dp"
                android:background="@drawable/gradient_blue" />

            <TableRow>

                <CheckBox android:id="@+id/schedule.checkbox.monday" />

                <CheckBox android:id="@+id/schedule.checkbox.tuesday" />

                <CheckBox android:id="@+id/schedule.checkbox.wednesday" />

                <CheckBox android:id="@+id/schedule.checkbox.thursday" />

                <CheckBox android:id="@+id/schedule.checkbox.friday" />

                <CheckBox android:id="@+id/schedule.checkbox.saturday" />

                <CheckBox android:id="@+id/schedule.checkbox.sunday" />
            </TableRow>
        </TableLayout>

        <!-- Button for save the selected week days by the user -->

        <Button
            android:id="@+id/schedule.button.daysweek"
            style="@style/common_button_style"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/days_week"
            android:drawablePadding="10dp"
            android:text="@string/schedule.button.daysweek" />
    </LinearLayout>

</ScrollView>